@@ -1,14 +1,15 @@
 package com.example;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class Animal {
 
     public List<String> getFood(String animalKind) throws Exception {
         if ("Травоядное".equals(animalKind)) {
-            return List.of("Трава", "Различные растения");
+            return Arrays.asList("Трава", "Различные растения");
         } else if ("Хищник".equals(animalKind)) {
-            return List.of("Животные", "Птицы", "Рыба");
+            return Arrays.asList("Животные", "Птицы", "Рыба");
         } else {
             throw new Exception("Неизвестный вид животного, используйте значение Травоядное или Хищник");
         }
